force-app/main/default/objects/Tax_Payer_Detail__c/Tax_Payer_Detail__c.object-meta.xml
<CustomObject>
    <label>Tax Payer Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Payer Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>