force-app/main/default/objects/Tax_Payer_Detail__c/fields/Average_Tax_Paid__c.field-meta.xml
<CustomField>
    <fullName>Average_Tax_Paid__c</fullName>
    <formula>Sum_Of_Tax_Paid__c  /  No_Of_Times_Tax_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Tax Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>