force-app/main/default/objects/Tax_Payer_Detail__c/fields/No_Of_Times_Tax_Paid__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Times_Tax_Paid__c</fullName>
    <label>No. Of Times Tax Paid</label>
    <summaryForeignKey>Tax_Paid_Per_Month__c.Tax_Payer_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>