force-app/main/default/objects/Tax_Payer_Detail__c/fields/Sum_Of_Tax_Paid__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Tax_Paid__c</fullName>
    <label>Sum Of Tax Paid</label>
    <summarizedField>Tax_Paid_Per_Month__c.Amount__c</summarizedField>
    <summaryForeignKey>Tax_Paid_Per_Month__c.Tax_Payer_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>